work on cross-correlation and auto-correlation

--- a/common/normalg.tex
+++ b/common/normalg.tex
@@ -48,9 +48,9 @@ Let $\algA$ be an \structe{algebra}.
 %---------------------------------------
 Let $\algA$ be an \structe{unital algebra} \xref{def:ualg} with unit $e$.
 \defbox{\begin{array}{M>{\ds}rc>{\ds}lC}
-  The \hid{spectrum} of $x\in\algA$ is        & \oppSpec(x)        &\eqd& \set{\lambda\in\C}{\lambda e - x \text{ is not invertible}}.\\
-  The \hid{resolvent} of $x\in\algA$ is       & \oppRes_x(\lambda) &\eqd& (\lambda e - x)^{-1}   & \forall\lambda\notin\oppSpec(x).\\
-  The \hid{spectral radius} of $x\in\algA$ is & \oppRad(x)         &\eqd& \sup\set{\abs{\lambda}}{\lambda\in\oppSpec(x)}.
+  The \structd{spectrum} of $x\in\algA$ is        & \oppSpec(x)        &\eqd& \set{\lambda\in\C}{\lambda e - x \text{ is not invertible}}.\\
+  The \structd{resolvent} of $x\in\algA$ is       & \oppRes_x(\lambda) &\eqd& (\lambda e - x)^{-1}   & \forall\lambda\notin\oppSpec(x).\\
+  The \structd{spectral radius} of $x\in\algA$ is & \oppRad(x)         &\eqd& \sup\set{\abs{\lambda}}{\lambda\in\oppSpec(x)}.
 \end{array}}
 \end{definition}
 
