--- a/common/operator.tex
+++ b/common/operator.tex
@@ -494,67 +494,45 @@ Let $\spW$, $\spX$, $\spY$, and $\spZ$ be linear spaces over a field $\F$.
 \end{enumerate}
 \end{proof}
   
-%%---------------------------------------
-%\begin{theorem}[Fundamental theorem of linear equations]
-%\index{Fundamental theorem of linear equations}
-%\index{theorems!Fundamental theorem of linear equations}
-%\citerpg{michel1993}{99}{048667598X}
-%%---------------------------------------
-%%Let $\opL\in\clOxy$ be a linear operator.
-%Let $\clOxy$ be the set of all operators from a linear space $\spX$ to a linear space $\spY$.
-%Let $\oppN(\opL)$ be the \hie{null space} of an operator $\opL$ in $\clOxy$
-%and $\oppI(\opL)$ the \hie{image set} of $\opL$ in $\clOxy$
-%(\prefp{def:rel_null}).
-%\thmbox{
-%  \dim \oppI(\opL) + \dim\oppN(\opL) = \dim \spX
-%  \qquad\scriptstyle
-%  \forall \opL\in\clOxy
-%  }
-%\end{theorem}
-%\begin{proof}
-%Let $\set{\psi_k}{k=1,2,\ldots,p}$ be a basis for $\spX$
-%constructed such that $\{\psi_{p-n+1},\psi_{p-n+2},\ldots,\psi_p\}$
-%is a basis for $\oppN(\opL)$.
-%\begin{align*}
-%  \text{Let } p &\eqd \dim\spX.         \\
-%  \text{Let } n &\eqd \dim\oppN(\opL).  \\
-%  \\
-%  \dim\oppI(\opL)
-%    &= \dim \set{\vy\in\spY}{\exists\vx\in\spX \st \vy=\opL\vx}
-%  \\&= \dim \set{\vy\in\spY}{\exists(\alpha_1,\alpha_2,\ldots,\alpha_p) \st \vy=\opL\sum_{k=1}^p\alpha_k\psi_k}
-%  \\&= \dim \set{\vy\in\spY}{\exists(\alpha_1,\alpha_2,\ldots,\alpha_p) \st
-%            \vy=\sum_{k=1}^p\alpha_k\opL\psi_k}
-%  \\&= \dim \set{\vy\in\spY}{\exists(\alpha_1,\alpha_2,\ldots,\alpha_p) \st
-%            \vy=\sum_{k=1}^{p-n}\alpha_k\opL\psi_k+\sum_{k=1}^n\alpha_k\opL\psi_k}
-%  \\&= \dim \set{\vy\in\spY}{\exists(\alpha_1,\alpha_2,\ldots,\alpha_p) \st
-%            \vy=\sum_{k=1}^{p-n}\alpha_k\opL\psi_k+\vzero}
-%  \\&= p-n
-%  \\&= \dim\spX - \dim\oppN(\opL)
-%\end{align*}
-%Note: This ``proof" may be missing some necessary detail. \problem
-%\end{proof}
-
-
-
-
-
-
-%%=======================================
-%\section{Operators on Metric linear spaces}
-%%=======================================
-%An operator on metric linear spaces is \prope{isometric} (next definition) if it is an \structe{isometry} (\prefp{def:isometry}).
-%%--------------------------------------
-%\begin{definition}
-%\label{def:op_isometric}
-%%--------------------------------------
-%Let $\metlinspaceX$ and $\metlinspaceY$ be \structe{metric linear spaces}.\footnote{%
-%  \structe{metric linear space}: \prefp{def:vs_metric}}
-%\defbox{\begin{array}{M}
-%  An operator $\opM\in\clOxy$ is \hid{isometric} if
-%  \\\qquad$\ds\metric{\vx}{\vy}= \metrica{\opM\vx}{\opM\vy} \qquad\scy \forall \vx,\vy\in\setX$.
-%}
-%\end{definition}
-
+%---------------------------------------
+\begin{theorem}[Fundamental theorem of linear equations]
+\index{Fundamental theorem of linear equations}
+\index{theorems!Fundamental theorem of linear equations}
+\citerpg{michel1993}{99}{048667598X}
+%---------------------------------------
+%Let $\opL\in\clOxy$ be a linear operator.
+Let $\clOxy$ be the set of all operators from a linear space $\spX$ to a linear space $\spY$.
+Let $\oppN(\opL)$ be the \hie{null space} of an operator $\opL$ in $\clOxy$
+and $\oppI(\opL)$ the \hie{image set} of $\opL$ in $\clOxy$
+(\prefp{def:rel_null}).
+\thmbox{
+  \dim \oppI(\opL) + \dim\oppN(\opL) = \dim \spX
+  \qquad\scriptstyle
+  \forall \opL\in\clOxy
+  }
+\end{theorem}
+\begin{proof}
+Let $\set{\psi_k}{k=1,2,\ldots,p}$ be a basis for $\spX$
+constructed such that $\{\psi_{p-n+1},\psi_{p-n+2},\ldots,\psi_p\}$
+is a basis for $\oppN(\opL)$.
+\begin{align*}
+  \text{Let } p &\eqd \dim\spX.         \\
+  \text{Let } n &\eqd \dim\oppN(\opL).  \\
+  \\
+  \dim\oppI(\opL)
+    &= \dim \set{\vy\in\spY}{\exists\vx\in\spX \st \vy=\opL\vx}
+  \\&= \dim \set{\vy\in\spY}{\exists(\alpha_1,\alpha_2,\ldots,\alpha_p) \st \vy=\opL\sum_{k=1}^p\alpha_k\psi_k}
+  \\&= \dim \set{\vy\in\spY}{\exists(\alpha_1,\alpha_2,\ldots,\alpha_p) \st
+            \vy=\sum_{k=1}^p\alpha_k\opL\psi_k}
+  \\&= \dim \set{\vy\in\spY}{\exists(\alpha_1,\alpha_2,\ldots,\alpha_p) \st
+            \vy=\sum_{k=1}^{p-n}\alpha_k\opL\psi_k+\sum_{k=1}^n\alpha_k\opL\psi_k}
+  \\&= \dim \set{\vy\in\spY}{\exists(\alpha_1,\alpha_2,\ldots,\alpha_p) \st
+            \vy=\sum_{k=1}^{p-n}\alpha_k\opL\psi_k+\vzero}
+  \\&= p-n
+  \\&= \dim\spX - \dim\oppN(\opL)
+\end{align*}
+Note: This ``proof" may be missing some necessary detail. \problem
+\end{proof}
 
 %=======================================
 \section{Operators on Normed linear spaces}
@@ -1132,161 +1110,161 @@ Let $\opBa$ be the adjoint of an operator $\opB$.
 \end{proof}
 
 
-%%=======================================
-%\subsection{More properties}
-%%=======================================
-%\qboxnpq
-%  {\href{http://en.wikipedia.org/wiki/Stanis\%C5\%82aw_Ulam}{Stanislaus M. Ulam}
-%   \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineG.html}{(1909--1984)},
-%   \href{http://www-history.mcs.st-andrews.ac.uk/BirthplaceMaps/Places/Germany.html}{Polish mathematician}
-%    \index{Ulam, Stanislaus M.}
-%    \index{quotes!Ulam, Stanislaus M.}
-%    \footnotemark
-%  }
-%  {../common/people/ulam.jpg}
-%  {Beginning with the third\vyear of studies,
-%   most of my mathematical work was really started in conversations with Mazur and Banach.
-%   And according to Banach some of my own contributions were characterized by a certain ``strangeness"
-%   in the formulation of problems and in the outline of possible proofs.
-%   As he told me once some\vyears later,
-%   he was surprised how often these ``strange" approaches really worked.}
-%  \footnotetext{\begin{tabular}[t]{ll}
-%    quote: & \citerp{ulam1991}{33} \\
-%    image: & \url{http://www-history.mcs.st-andrews.ac.uk/Biographies/Ulam.html}
-%  \end{tabular}}
-%
-%
-%%---------------------------------------
-%\begin{theorem}[\thm{Mazur-Ulam theorem}]
-%\label{thm:mazur-ulam}
-%\footnote{
-%  \citerp{oikhberg2007}{598} \\
-%  \citerp{vaisala2003}{634} \\
-%  \citerp{giles2000}{11} \\
-%  \citerp{dunford1957}{91} \\
-%  \citor{mazur1932}
-%  }
-%%---------------------------------------
-%Let $\fphi\in\clLxy$ be a function on normed linear spaces
-%$\opair{\spX}{\normn_\spX}$ and $\opair{\spY}{\normn_\spY}$.
-%Let $\opI\in\clLxx$ be the identity operator on $\opair{\spX}{\normn_\spX}$.
-%\thmbox{\begin{array}{ll}
-%  \left.\begin{array}{llD}
-%    1. & \mcom{\fphi^{-1}\fphi = \fphi\fphi^{-1} = \opI}
-%              {\prop{bijective}}
-%       & and \\
-%    2. & \mcom{\norm{\fphi\vx-\fphi\vy}_\spY = \norm{\vx-\vy}_\spX  \quad\sst\forall \vx,\vy\in\spX}
-%              {\prop{isometric}}
-%  \end{array}\right\}
-%  \implies
-%  \mcom{\fphi\brp{[1-\lambda]\vx+\lambda\vy} = [1-\lambda]\fphi\vx + \lambda\fphi\vy
-%        \forall \lambda\in\R}
-%       {\prop{affine}}
-%\end{array}}
-%\end{theorem}
-%\begin{proof}
-%Proof not\vyet complete.\attention
-%\begin{enumerate}
-%  \item Let $\fpsi$ be the \hie{reflection} of $\vz$ in $\spX$ such that
-%        $\fpsi \vx = 2\vz - \vx$
-%        \label{item:mazur-ulam_psi}
-%    \begin{enumerate}
-%      \item $\norm{\fpsi\vx-\vz} = \norm{\vx-\vz}$
-%    \end{enumerate}
-%
-%  \item Let $\ds\lambda \eqd \sup_\fg\setn{\norm{\fg\vz-\vz}}$ \label{item:mazur-ulam_lambda}
-%
-%  \item Proof that $\fg\in\setW \implies \fg^{-1}\in\setW$: \label{item:mazur-ulam_gi}
-%    \begin{align*}
-%      \intertext{Let $\hat{\vx}\eqd \fg^{-1}\vx$ and $\hat{\vy}\eqd \fg^{-1}\vy$.}
-%      \norm{\fg^{-1}\vx - \fg^{-1}\vy}
-%        &= \norm{\hat{\vx} - \hat{\vy}}
-%        && \text{by definition of $\hat{\vx}$ and $\hat{\vy}$}
-%      \\&= \norm{\fg\hat{\vx} - \fg\hat{\vy}}
-%        && \text{by left hypothesis}
-%      \\&= \norm{\fg\fg^{-1}\vx - \fg\fg^{-1}\vy}
-%        && \text{by definition of $\hat{\vx}$ and $\hat{\vy}$}
-%      \\&= \norm{\vx - \vy}
-%        && \text{by definition of $\fg^{-1}$}
-%    \end{align*}
-%
-%  \item Proof that $\fg\vz = \vz$:
-%    \begin{align*}
-%      2\lambda
-%        &= 2\sup\setn{\norm{\fg\vz-\vz}}
-%        && \text{by definition of $\lambda$ \pref{item:mazur-ulam_lambda}}
-%      \\&\le 2\norm{\fg\vz-\vz}
-%        && \text{by definition of $\sup$}
-%      \\&= \norm{2\vz-2\fg\vz}
-%      \\&= \norm{\fpsi\fg\vz-\fg\vz}
-%        && \text{by definition of $\fpsi$ \pref{item:mazur-ulam_psi}}
-%      \\&= \norm{\fg^{-1}\fpsi\fg\vz-\fg^{-1}\fg\vz}
-%        && \text{by \pref{item:mazur-ulam_gi}}
-%      \\&= \norm{\fg^{-1}\fpsi\fg\vz-\vz}
-%        && \text{by definition of $\fg^{-1}$}
-%      \\&= \norm{\fpsi\fg^{-1}\fpsi\fg\vz-\vz}
-%      \\&= \norm{\fg^\ast\vz-\vz}
-%      \\&\le \lambda
-%        && \text{by definition of $\lambda$ \pref{item:mazur-ulam_lambda}}
-%      \\&\implies 2\lambda \le \lambda
-%      \\&\implies \lambda=0
-%      \\&\implies \fg\vz = \vz
-%    \end{align*}
-%
-%  \item Proof that $\fphi\brp{\frac{1}{2}\vx+\frac{1}{2}\vy} = \frac{1}{2}\fphi\vx + \frac{1}{2}\fphi\vy$:
-%    \begin{align*}
-%      \fphi\brp{\frac{1}{2}\vx+\frac{1}{2}\vy}
-%        &=
-%      \\&= \frac{1}{2}\fphi\vx + \frac{1}{2}\fphi\vy
-%    \end{align*}
-%
-%  \item Proof that $\fphi\brp{[1-\lambda]\vx+\lambda\vy} = [1-\lambda]\fphi\vx + \lambda\fphi\vy$:
-%    \begin{align*}
-%      \fphi\brp{[1-\lambda]\vx+\lambda\vy}
-%        &=
-%      \\&= [1-\lambda]\fphi\vx + \lambda\fphi\vy
-%    \end{align*}
-%\end{enumerate}
-%\end{proof}
-%
-%
-%%---------------------------------------
-%\begin{theorem}[Neumann Expansion Theorem]
-%\index{Neumann Expansion Theorem}
-%\index{theorems!Neumann Expansion Theorem}
-%\label{thm:op_net}
-%\footnote{
-%  \citerpg{michel1993}{415}{048667598X}
-%  }
-%%---------------------------------------
-%Let $\opA\in\clOxx$ be an operator on a linear space $\spX$.
-%Let $\opA^0\eqd \opI$.
-%\thmbox{\begin{array}{ll}
-%  \left.\begin{array}{llD}
-%    1. & \opA          \in \clBxx  & ($\opA$ is bounded) \\
-%    2. & \normop{\opA} <   1
-%  \end{array}\right\}
-%  \implies
-%  \left\{\begin{array}{lrc>{\ds}l}
-%    1. & (\opI-\opA)^{-1} &&\text{ exists} \\
-%    2. & \normop{(\opI-\opA)^{-1}} &\le& \frac{1}{1-\normop{\opA}} \\
-%    3. & (\opI-\opA)^{-1} &=& \sum_{n=0}^\infty \opA^n  \\
-%       & \mc{3}{c}{\text{ with uniform convergence}}
-%  \end{array}\right.
-%\end{array}}
-%\end{theorem}
+%=======================================
+\subsection{More properties}
+%=======================================
+\qboxnpq
+  {\href{http://en.wikipedia.org/wiki/Stanis\%C5\%82aw_Ulam}{Stanislaus M. Ulam}
+   \href{http://www-history.mcs.st-andrews.ac.uk/Timelines/TimelineG.html}{(1909--1984)},
+   \href{http://www-history.mcs.st-andrews.ac.uk/BirthplaceMaps/Places/Germany.html}{Polish mathematician}
+    \index{Ulam, Stanislaus M.}
+    \index{quotes!Ulam, Stanislaus M.}
+    \footnotemark
+  }
+  {../common/people/ulam.jpg}
+  {Beginning with the third year of studies,
+   most of my mathematical work was really started in conversations with Mazur and Banach.
+   And according to Banach some of my own contributions were characterized by a certain ``strangeness"
+   in the formulation of problems and in the outline of possible proofs.
+   As he told me once some years later,
+   he was surprised how often these ``strange" approaches really worked.}
+  \footnotetext{\begin{tabular}[t]{ll}
+    quote: & \citerp{ulam1991}{33} \\
+    image: & \url{http://www-history.mcs.st-andrews.ac.uk/Biographies/Ulam.html}
+  \end{tabular}}
+
+
+%---------------------------------------
+\begin{theorem}[\thm{Mazur-Ulam theorem}]
+\label{thm:mazur-ulam}
+\footnote{
+  \citerp{oikhberg2007}{598},
+  \citerp{vaisala2003}{634},
+  \citerp{giles2000}{11},
+  \citerp{dunford1957}{91},
+  \citor{mazur1932}
+  }
+%---------------------------------------
+Let $\fphi\in\clLxy$ be a function on normed linear spaces
+$\opair{\spX}{\normn_\spX}$ and $\opair{\spY}{\normn_\spY}$.
+Let $\opI\in\clLxx$ be the identity operator on $\opair{\spX}{\normn_\spX}$.
+\thmbox{\begin{array}{ll}
+  \left.\begin{array}{llD}
+    1. & \mcom{\fphi^{-1}\fphi = \fphi\fphi^{-1} = \opI}
+              {\prop{bijective}}
+       & and \\
+    2. & \mcom{\norm{\fphi\vx-\fphi\vy}_\spY = \norm{\vx-\vy}_\spX  \quad\sst\forall \vx,\vy\in\spX}
+              {\prop{isometric}}
+  \end{array}\right\}
+  \implies
+  \mcom{\fphi\brp{[1-\lambda]\vx+\lambda\vy} = [1-\lambda]\fphi\vx + \lambda\fphi\vy
+        \forall \lambda\in\R}
+       {\prop{affine}}
+\end{array}}
+\end{theorem}
+\begin{proof}
+Proof not yet complete.\attention
+\begin{enumerate}
+  \item Let $\fpsi$ be the \hie{reflection} of $\vz$ in $\spX$ such that
+        $\fpsi \vx = 2\vz - \vx$
+        \label{item:mazur-ulam_psi}
+    \begin{enumerate}
+      \item $\norm{\fpsi\vx-\vz} = \norm{\vx-\vz}$
+    \end{enumerate}
+
+  \item Let $\ds\lambda \eqd \sup_\fg\setn{\norm{\fg\vz-\vz}}$ \label{item:mazur-ulam_lambda}
+
+  \item Proof that $\fg\in\setW \implies \fg^{-1}\in\setW$: \label{item:mazur-ulam_gi}
+    \begin{align*}
+      \intertext{Let $\hat{\vx}\eqd \fg^{-1}\vx$ and $\hat{\vy}\eqd \fg^{-1}\vy$.}
+      \norm{\fg^{-1}\vx - \fg^{-1}\vy}
+        &= \norm{\hat{\vx} - \hat{\vy}}
+        && \text{by definition of $\hat{\vx}$ and $\hat{\vy}$}
+      \\&= \norm{\fg\hat{\vx} - \fg\hat{\vy}}
+        && \text{by left hypothesis}
+      \\&= \norm{\fg\fg^{-1}\vx - \fg\fg^{-1}\vy}
+        && \text{by definition of $\hat{\vx}$ and $\hat{\vy}$}
+      \\&= \norm{\vx - \vy}
+        && \text{by definition of $\fg^{-1}$}
+    \end{align*}
+
+  \item Proof that $\fg\vz = \vz$:
+    \begin{align*}
+      2\lambda
+        &= 2\sup\setn{\norm{\fg\vz-\vz}}
+        && \text{by definition of $\lambda$ \pref{item:mazur-ulam_lambda}}
+      \\&\le 2\norm{\fg\vz-\vz}
+        && \text{by definition of $\sup$}
+      \\&= \norm{2\vz-2\fg\vz}
+      \\&= \norm{\fpsi\fg\vz-\fg\vz}
+        && \text{by definition of $\fpsi$ \pref{item:mazur-ulam_psi}}
+      \\&= \norm{\fg^{-1}\fpsi\fg\vz-\fg^{-1}\fg\vz}
+        && \text{by \pref{item:mazur-ulam_gi}}
+      \\&= \norm{\fg^{-1}\fpsi\fg\vz-\vz}
+        && \text{by definition of $\fg^{-1}$}
+      \\&= \norm{\fpsi\fg^{-1}\fpsi\fg\vz-\vz}
+      \\&= \norm{\fg^\ast\vz-\vz}
+      \\&\le \lambda
+        && \text{by definition of $\lambda$ \pref{item:mazur-ulam_lambda}}
+      \\&\implies 2\lambda \le \lambda
+      \\&\implies \lambda=0
+      \\&\implies \fg\vz = \vz
+    \end{align*}
+
+  \item Proof that $\fphi\brp{\frac{1}{2}\vx+\frac{1}{2}\vy} = \frac{1}{2}\fphi\vx + \frac{1}{2}\fphi\vy$:
+    \begin{align*}
+      \fphi\brp{\frac{1}{2}\vx+\frac{1}{2}\vy}
+        &=
+      \\&= \frac{1}{2}\fphi\vx + \frac{1}{2}\fphi\vy
+    \end{align*}
+
+  \item Proof that $\fphi\brp{[1-\lambda]\vx+\lambda\vy} = [1-\lambda]\fphi\vx + \lambda\fphi\vy$:
+    \begin{align*}
+      \fphi\brp{[1-\lambda]\vx+\lambda\vy}
+        &=
+      \\&= [1-\lambda]\fphi\vx + \lambda\fphi\vy
+    \end{align*}
+\end{enumerate}
+\end{proof}
+
+
+%---------------------------------------
+\begin{theorem}[Neumann Expansion Theorem]
+\index{Neumann Expansion Theorem}
+\index{theorems!Neumann Expansion Theorem}
+\label{thm:op_net}
+\footnote{
+  \citerpg{michel1993}{415}{048667598X}
+  }
+%---------------------------------------
+Let $\opA\in\clOxx$ be an operator on a linear space $\spX$.
+Let $\opA^0\eqd \opI$.
+\thmbox{\begin{array}{ll}
+  \left.\begin{array}{llD}
+    1. & \opA          \in \clBxx  & ($\opA$ is bounded) \\
+    2. & \normop{\opA} <   1
+  \end{array}\right\}
+  \implies
+  \left\{\begin{array}{lrc>{\ds}l}
+    1. & (\opI-\opA)^{-1} &&\text{ exists} \\
+    2. & \normop{(\opI-\opA)^{-1}} &\le& \frac{1}{1-\normop{\opA}} \\
+    3. & (\opI-\opA)^{-1} &=& \sum_{n=0}^\infty \opA^n  \\
+       & \mc{3}{c}{\text{ with uniform convergence}}
+  \end{array}\right.
+\end{array}}
+\end{theorem}
 
 
 %%---------------------------------------
 %\begin{definition}
+%\footnote{
+%  \citerp{rudinf}{312},
+%  \citerpg{michel1993}{431}{048667598X}
+%  }
 %\label{def:op_types}
 %\label{def:op_normal}
 %\label{def:op_isometric}
 %\label{def:op_unitary}
-%\footnote{
-%  \citerp{rudinf}{312} \\
-%  \citerpg{michel1993}{431}{048667598X}
-%  }
 %\index{operator!normal}      \index{normal operator}
 %\index{operator!isometric}   \index{isometric operator}
 %\index{operator!unitary}     \index{unitary operator}
@@ -1316,16 +1294,16 @@ Let $\opBa$ be the adjoint of an operator $\opB$.
 %  }
 
 
-%%--------------------------------------
-%\begin{theorem}
-%%--------------------------------------
-%Let $\normspaceX$ be a normed linear space.
-%\thmbox{
-%  \text{$\opM$ is \prope{isometric}}
-%  \qquad\implies\qquad
-%  \no
-%  }
-%\end{theorem}
+%--------------------------------------
+\begin{theorem}
+%--------------------------------------
+Let $\normspaceX$ be a normed linear space.
+\thmbox{
+  \text{$\opM$ is \prope{isometric}}
+  \qquad\implies\qquad
+  \no
+  }
+\end{theorem}
 
 
 
