--- a/common/sty/engclass.sty
+++ b/common/sty/engclass.sty
@@ -174,3 +174,43 @@
 \newcommand{\fullcite}{\cite}
 \newcommand{\citex}[2]{\citetbl{\citerp{#1}{#2}}}% deprecated
 \newcommand{\bll}{\blank[2ex] }
+
+
+\newcommand{\papersoccer}[1][6mm]{%
+  \setlength{\baselineskip}{0pt}%
+  %\psset{linewidth=1.0pt}%
+  %\setlength{\colsepx}{#4\rowsepx}
+  \begin{psmatrix}[mnode=C, radius=\nradius, rowsep=#1, colsep=#1, linecolor=latdot]%
+   %  1       2       3       4       5       6       7 
+          &       & \null & \null & \null                 \\%  1
+    \null & \null & \null & \null & \null & \null & \null \\%  2
+    \null & \null & \null & \null & \null & \null & \null \\%  3
+    \null & \null & \null & \null & \null & \null & \null \\%  4
+    \null & \null & \null & \null & \null & \null & \null \\%  5
+    \null & \null & \null & \null & \null & \null & \null \\%  6
+    \null & \null & \null & \null & \null & \null & \null \\%  7
+    \null & \null & \null & \null & \null & \null & \null \\%  8
+    \null & \null & \null & \null & \null & \null & \null \\%  9
+    \null & \null & \null & \null & \null & \null & \null \\% 10 
+          &       & \null & \null & \null &       &         % 11 
+  \end{psmatrix}%
+  %\psset{linecolor=latline}%
+  %left border
+  \ncline{2,1}{3,1}\ncline{3,1}{4,1}\ncline{4,1}{5,1}\ncline{5,1}{6,1}\ncline{6,1}{7,1}
+  \ncline{7,1}{8,1}\ncline{8,1}{9,1}\ncline{9,1}{10,1}%
+  %right border
+  \ncline{2,7}{3,7}\ncline{3,7}{4,7}\ncline{4,7}{5,7}\ncline{5,7}{6,7}\ncline{6,7}{7,7}
+  \ncline{7,7}{8,7}\ncline{8,7}{9,7}\ncline{9,7}{10,7}%
+  %top
+  \ncline{2,1}{2,2}\ncline{2,2}{2,3}%top left
+  \ncline{2,7}{2,6}\ncline{2,6}{2,5}%top right
+  \ncline{2,3}{1,3}\ncline{1,3}{1,4}\ncline{1,4}{1,5}\ncline{1,5}{2,5}%top goal
+  %bottom
+  \ncline{10,1}{10,2}\ncline{10,2}{10,3}%bottom left
+  \ncline{10,7}{10,6}\ncline{10,6}{10,5}%bottom right
+  \ncline{10,3}{11,3}\ncline{11,3}{11,4}\ncline{11,4}{11,5}\ncline{11,5}{10,5}%bottom goal
+  %\psset{labelsep=1pt}%
+  \begin{color}{latlabel}%
+  \end{color}%
+  }%
+
