removed large comment blocks from wavstrct.tex and mra.tex; start converting theorem into corollary in random.tex

--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -94,28 +94,18 @@ For example, $\spllR$ is isomorphic to $\spLLR$, the \structe{space of all absol
 
 %--------------------------------------
 \begin{definition}
-\label{def:opZ}
 \footnote{
   \structe{Laurent series}: \citerpg{aa}{49}{0821821466}
   }
+\label{def:opZ}
 %--------------------------------------
 %Let $\seq{x_n}{n\in\Z}$ be a sequence in the space $\spllR$. %over a ring $\ring$. 
 \defbox{\begin{array}{M}
-  The \hid{z-transform} $\opZ$ of $\seq{x_n}{n\in\Z}$ is defined as
+  The \opd{z-transform} $\opZ$ of $\seq{x_n}{n\in\Z}$ is defined as
   \\\indentx
   $\ds\brs{\hxs{\opZ}\seqn{x_n}}(z) \eqd \mcom{\sum_{n\in\Z} x_n z^{-n}}{Laurent series}\qquad\scy\forall\seqn{x_n}\in\spllR$
 \end{array}}
 \end{definition}
-
-
-%%--------------------------------------
-%\begin{theorem}
-%%--------------------------------------
-%\thmbox{
-%  \opZ\opT^n\seqn{x_n} = \
-%  }
-%\end{theorem}
-%
 
 %--------------------------------------
 \begin{proposition}
@@ -249,7 +239,7 @@ $\ds{\frac{\brp{\sfrac{3}{2} + \sfrac{5}{2}z^{-1} + \sfrac{7}{2}z^{-2}}}
 %=======================================
 \section{Zero locations}
 %=======================================
-The system property of \prope{minimum phase} is defined in \pref{def:ztr_minphase} (next) and 
+The system property of \prope{minimum phase} is defined in \pref{def:minphase} (next) and 
 illustrated in \prefpp{fig:pz_minphase}.
 \begin{figure}[h]
   \centering%
@@ -266,7 +256,7 @@ illustrated in \prefpp{fig:pz_minphase}.
   \citerpg{farina2000}{91}{0471384569},
   \citerpg{dumitrescu2007}{36}{1402051247}
   }
-\label{def:ztr_minphase}
+\label{def:minphase}
 \index{minimum phase}
 %--------------------------------------
 Let $\Zx(z)\eqd\opZ\seqn{x_n}$ be the \fncte{z transform} \xref{def:opZ} of a sequence $\seqxZ{x_n}$ in $\spllR$.
