--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1465,14 +1465,11 @@
 \newcommand{\oppR} [0]{\oppXYZ{R}}                  %Range
 \newcommand{\oppI} [0]{\oppXYZ{I}}                  %Image set
 \newcommand{\oppS} [0]{\linspan}                  %span of a set of vectors
-%\newcommand{\Span} [0]{\oppXYZ{S}}                 %span of a set of vectors
-%\newcommand{\Span} [0]{\mathrm{span}}               %span of a set of vectors
-%\newcommand{\Span} [0]{{\mathup{\msanss\!\msansp\!\msansa\!\msansn}\!}} %span of a set of vectors
 \newcommand{\epi} [0]{{\mathsfup{e\!p\!i}}} %epigraph of a functional
 \newcommand{\hyp} [0]{{\mathsfup{h\!y\!p}}} %hypograph of a functional
 \newcommand{\linspan} [0]{{\mathsfup{s\!p\!a\!n}\!}} %span of a set of vectors
+%\newcommand{\WSS} [0]{{\mathsfup{W\!S\!S}}} %span of a set of vectors
 \newcommand{\Span} [0]{\linspan} % deprecated
-%\newcommand{\Spanc} [0]{\overline{\Span}}           %closure of the span of a set of vectors
 \newcommand{\oppL} [0]{\oppXYZ{L}}                  %set of linear operators
 \newcommand{\oppB} [0]{\oppXYZ{B}}                  %set of bounded operators
 \newcommand{\oppC} [0]{\oppXYZ{C}}                  %set of continuous operators
@@ -1546,7 +1543,8 @@
 \newcommand{\LT}  [1]   {\ensuremath{\hat{{#1}}}}
 \newcommand{\ZT}  [1]   {\ensuremath{\hat{{#1}}}}
 \newcommand{\conv}{\star}  % convolution
-\newcommand{\convd}{\varstar}  % discrete convolution
+\newcommand{\convd}{\conv}  % discrete convolution
+%\newcommand{\convd}{\varstar}  % discrete convolution
 \newcommand{\invo}{\ast}   % involution
 
 \newcommand{\ex}   [0]{x}
@@ -1686,6 +1684,7 @@
 \newcommand{\origin}{\oquad{0}{0}{\cdots}{0}}
 \newcommand{\fieldF}{\field{\F}{+}{\cdot}}
 \newcommand{\fieldR}{\field{\R}{+}{\cdot}}
+\newcommand{\fieldC}{\field{\C}{+}{\cdot}}
 \newcommand{\fieldX}{\field{\setX}{+}{\cdot}}
 \newcommand{\fieldRa}{\field{\R}{\addf}{\dottimes}}
 \newcommand{\linearspace}[6]{\left(#1,\,#2,\,#3,\, (#4,\,#5,\,#6)\right)}
