discrete random process update

--- a/common/dsp.tex
+++ b/common/dsp.tex
@@ -176,6 +176,7 @@ Let $\opZ\fx[n]$ be the \ope{z-transform} of $\fx[n]$.
 
 %--------------------------------------
 \begin{theorem}
+\label{thm:conv}
 %--------------------------------------
 Let $\convd$ be the convolution operator \xref{def:dsp_conv}.
 %$\seq{x_n}{n\in\Z}$ and $\seq{y_n}{n\in\Z}$ be sequences in the space $\spllR$. %be sequences over a ring $\ring$.
