--- a/common/stats.tex
+++ b/common/stats.tex
@@ -307,7 +307,7 @@ less intuitive but provides powerful analytic results.
 %---------------------------------------
 Let $\ff:\R\to\R$.
 For every $x_1,x_2\in(a,b)$ and $\lambda\in[0,1]$
-\formbox{
+\thmbox{
   \ff \mbox{ is convex in $(a,b)$ } \iff
         \ff(\lambda x_1+(1-\lambda)x_2) \le \lambda\ff(x_1) + (1-\lambda)\ff(x_2)
   }
@@ -350,7 +350,7 @@ for whether that function is convex.
 \label{thm:convex_d2}
 \citepp{cover}{24}{25}
 %---------------------------------------
-\formbox{
+\thmbox{
   \ff''(x)>0 \implies \ff \mbox{ is convex}
   }
 \end{theorem}
@@ -421,15 +421,15 @@ expectation operator: \hie{Jensen's inequality}.
 Jensen's inequality is stated in \prefpp{thm:jensen}
 and illustrated in \prefpp{fig:jensen}.
 %--------------------------------------
-\begin{theorem}[Jensen's inequality]
-\citep{cover}{25}
-\citepp{jensen1906}{179}{180}
-\index{Jensen's inequality}
-\index{theorems!Jensen's inequality}
+\begin{theorem}[\thmd{Jensen's inequality}]
+\footnote{
+  \citerp{cover}{25},
+  \citerpp{jensen1906}{179}{180}
+  }
 \label{thm:jensen}
 %--------------------------------------
 Let $\ff$ be a convex function and $\rvX$ be a random variable. Then
-\formbox{
+\thmbox{
   \ff \mbox{ is convex} \implies \ff(\pE X) \le \pE\ff(X).
   }
 \end{theorem}
@@ -464,7 +464,7 @@ Then
 %---------------------------------------
 Let $\rvX:\Omega\to[0,\infty)$ be a non-negative valued random variable and
 $a\in(0,\infty)$. Then
-\formbox{ \pP{X\ge a} \le \frac{1}{a} \pE X }
+\thmbox{ \pP{X\ge a} \le \frac{1}{a} \pE X }
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
@@ -566,7 +566,7 @@ Let $\rvX$ be a random variable with mean $\mu$ and variance $\sigma^2$.
 %---------------------------------------
 Let $Y=\ff(X)$ and $\set{x_n}{n=1,2,\ldots,N}$ be the roots of the equation
 $y=\ff(x)$.
-\formbox{
+\thmbox{
   \ppy(y) = \sum_{n=1}^N \frac{\ppx(x_n)}{|\ff'(x_n)|}
 }
 \end{theorem}
@@ -602,7 +602,7 @@ $\set{A_n}{x_n\in A_n, n=1,2,\ldots,N}$ and $h\to0$.
   }
 %---------------------------------------
 Let $a,b\in\R, a\ne 0$ and $Y=aX+b$. Then
-\formbox{
+\propbox{
   \ppy(y) =
     \frac{1}{|a|} \ppx\left(\frac{y-b}{a}\right)
   }
@@ -685,7 +685,7 @@ The only root of $y=ax+b$ is $x_1=\frac{y-b}{a}$.
   }
 %---------------------------------------
 Let $Y=\frac{1}{X}$. Then
-\formbox{
+\propbox{
   \ppy(y) = \left\{\begin{array}{lM}
      %                                             & for $y<0$ \\
      %0                                            & for $y=0$ \\
@@ -1176,7 +1176,7 @@ The {\bf convolution} operator $\conv$ is defined as
 %---------------------------------------
 Let $\rvX$ and $Y$ be independent random varibles and $Z\eqd X+Y$.
 Then
-\formbox{ \ppz(z) = \ppx(z)\conv\ppy(z)  }
+\thmbox{ \ppz(z) = \ppx(z)\conv\ppy(z)  }
 \end{theorem}
 \begin{proof}
 \begin{eqnarray*}
@@ -1226,7 +1226,7 @@ Let $\rvX$ and $Y$ be random variables with joint distribution
 $\ppxy(x,y)$ and
 \[ R^2 \eqd X^2 + Y^2 \hspace{10ex} \Theta \eqd \atan\frac{Y}{X}. \]
 Then
-\formbox{
+\propbox{
   \ppx[R,\Theta](r,\theta)
     =  r\;\ppxy(r\cos\theta,r\sin\theta)
   }
@@ -1269,7 +1269,7 @@ Let $X\sim\pN{0}{\sigma^2}$ and $Y\sim\pN{0}{\sigma^2}$ be
 independent random variables and
 \[ R^2 \eqd X^2 + Y^2 \hspace{10ex} \Theta \eqd \atan\frac{Y}{X}. \]
 Then
-\formbox{\begin{array}{llrcl}
+\propbox{\begin{array}{llrcl}
   1. & \mbox{$R$ and $\Theta$ are independent with joint distribution}
      & \ppx[R,\Theta](r,\theta) &=& \ppr(r)\ppth(\theta)
 \\
@@ -1306,7 +1306,7 @@ Then
 Let $X\sim\pN{\pmeanx}{\pvarx}$ and $Y\sim\pN{\pmeany}{\pvary}$ be
 jointly Gaussian random variables and $\pvarxy=\cov{X}{Y}$.
 Then
-\formbox{
+\propbox{
   \pP{X>Y} = \pQ\left( \frac{-\pmeanx + \pmeany}{\pvarx+\pvary-2\pvarxy}\right)
   }
 \end{proposition}
